# duke3d

./: .gitattributes  .gitignore  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  configure.scan
.github/workflows/: codeql.yml
extras/: config.h
source/: .gitattributes  .gitignore  Makefile.am  Makefile.in  Makefile_orig.in  aclocal.m4  astub.c  config.h.in  configure  configure.ac  configure.scan  control.c  duke3d.h  game.c  menues.c  player.c
source/audiolib/: Makefile_orig.in
source/buildengine/: .gitignore  Doxyfile  Makefile_orig.in  build.h  mmulti.c  platform.h  sdl_driver.c
source/buildengine/html/: a_8h_source.html  annotated.html  bstub_8h_source.html  build_8h_source.html  buildgl_8h_source.html  buildperl_8h_source.html  cache1d_8h_source.html  classes.html  display_8h_source.html  doscmpat_8h_source.html  engine_8h.html  engine_8h_source.html  engine__protos_8h_source.html  files.html  globals.html  globals_func.html  index.html  names_8h_source.html  platform_8h_source.html  pragmas_8h_source.html  structRMSREGS-members.html  structRMSREGS.html  structVBE__modeInfo-members.html  structVBE__modeInfo.html  structVBE__vgaInfo-members.html  structVBE__vgaInfo.html  struct__RMBYTEREGS-members.html  struct__RMBYTEREGS.html  struct__RMREGS-members.html  struct__RMREGS.html  struct__RMWORDREGS-members.html  struct__RMWORDREGS.html  structsectortype-members.html  structsectortype.html  structspritetype-members.html  structspritetype.html  structwalltype-members.html  structwalltype.html  unionRMREGS-members.html  unionRMREGS.html  (+3 more)
source/buildengine/latex/: annotated.tex  doxygen.sty  engine_8h.tex  files.tex  refman.tex  structRMSREGS.tex  structVBE__modeInfo.tex  structVBE__vgaInfo.tex  struct__RMBYTEREGS.tex  struct__RMREGS.tex  struct__RMWORDREGS.tex  structsectortype.tex  structspritetype.tex  structwalltype.tex  unionRMREGS.tex
source/buildengine/tests/: .gitignore  Makefile_orig.in
source/buildengine/utils/: .gitignore  Makefile_orig.in
source/m4/: sdl.m4
